Use business icon as a favicon
Not very useful because business will use iframe to host it but probably worth it

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!--
+      Default icon (if needed)
+      <link id="favicon" rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" data-react-helmet="true" />
+    -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
