--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Your loyalty app control panel. Create and update campaigns, products, pages, change settings and more."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Loyalty App - Control Panel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
