Back to standalone display, don't allow zooming

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       Default icon (if needed)
       <link id="favicon" rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" data-react-helmet="true" />
     -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="%REACT_APP_DESCRIPTION%" />
     <meta name="keywords" content="%REACT_APP_KEYWORDS%" />
