--- a/loyalty-panel/public/index.html
+++ b/loyalty-panel/public/index.html
@@ -29,6 +29,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Loyalty App - Control Panel</title>
+
+    <!-- Analytics -->
+    <script async defer data-domain="panel.getloyalty.app" src="https://analytics.getloyalty.app/js/plausible.js"></script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
