Update analytics url
So adblockers don't recognize it

--- a/loyalty-panel/public/index.html
+++ b/loyalty-panel/public/index.html
@@ -31,7 +31,7 @@
     <title>Loyalty App - Control Panel</title>
 
     <!-- Analytics -->
-    <script async defer data-domain="panel.getloyalty.app" src="https://analytics.getloyalty.app/js/plausible.js"></script>
+    <script async defer data-domain="panel.getloyalty.app" src="https://count.getloyalty.app/js/plausible.js"></script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
