Implement common js/css loaded immediately in pwa

--- a/loyalty-app/public/index.html
+++ b/loyalty-app/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress HtmlUnknownTarget -->
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -26,6 +27,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>%REACT_APP_NAME%</title>
+
+    <!-- Common page CSS/JS -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/api/page/common/main.css"/>
+    <script src="%PUBLIC_URL%/api/page/common/main.js"></script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
