--- a/assets/pages/campaigns.html
+++ b/assets/pages/campaigns.html
@@ -100,7 +100,7 @@
     display: block;
     background-size: cover;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     -webkit-filter: blur(2px);
     filter: blur(2px);
   }
