Fix: wrong common static path

--- a/loyalty-app/public/index.html
+++ b/loyalty-app/public/index.html
@@ -29,8 +29,8 @@
     <title>%REACT_APP_NAME%</title>
 
     <!-- Common page CSS/JS -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/api/page/common/main.css"/>
-    <script src="%PUBLIC_URL%/api/page/common/main.js"></script>
+    <link rel="stylesheet" href="%PUBLIC_URL%/api/page/common/static/main.css"/>
+    <script src="%PUBLIC_URL%/api/page/common/static/main.js"></script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
