--- a/assets/pages/campaigns.html
+++ b/assets/pages/campaigns.html
@@ -1,80 +1,68 @@
-<!--
-  The default campaigns page.
-
-  This is only for development.
-  The elements inside <body> tag (without the <body> tag) and <style> tag (including the <style> tag) can be copied as the actual page html.
-
-  See ./panel/public/templates/common_main.css for common CSS classes etc.
-  See ./panel/public/templates/common_main.js for common scripts
- -->
-<!doctype html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-          crossorigin="anonymous" referrerpolicy="no-referrer">
-
-    <!-- Other CSS / Themes -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-creative/5.1.8/css/creative.min.css"
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
-
-    <title>Campaigns template page</title>
-</head>
-<body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <div class="page">
     <div class="text-center h-auto">
         <div class="py-4">
-            <h1 class="text-primary">Active Campaigns ({{campaigns.length}})</h1>
+            <h1 class="text-primary">Active Campaigns ({{campaigns.length}})
+            </h1>
         </div>
         <div class="my-2 fs-4 text-light text-center">
-            Show your <i><a href="/profile" class="link-light">QR code</a></i> to participate.
+            Show your
+            <i>
+                <a href="/profile" class="link-light">QR code</a>
+            </i> to participate.
         </div>
     </div>
     <div class="card page-modal my-3">
         <div class="card-body">
-            <div class="p-2">{{#each campaigns}}</div>
-            <h4 class="card-title">{{name}}</h4>
+            <div class="p-2">{{#each campaigns}}
+            </div>
+            <h4 class="card-title">{{name}}
+            </h4>
             <div class="py-2 fs-3">{{#each customerProgress}}
                 <span draggable="true">💰</span>
                 <span draggable="true">{{/each}}{{#each stampsNeeded}}<span draggable="true">📦</span>{{/each}}</span>
             </div>
             <p class="my-1 py-1 text-primary">
-            <span>
-                {{currentStampsAll.length}}
-                {{#if totalStampsNeeded}}/{{totalStampsNeeded}}{{/if}} total stamps
-            </span>
+		<span>
+		  {{currentStampsAll.length}}
+		  {{#if totalStampsNeeded}}/{{totalStampsNeeded}}{{/if}} total stamps
+		</span>
             </p>
-            <p class="text-secondary h-auto p-3">{{description}}</p>
+            <p class="text-secondary h-auto p-3">{{description}}
+            </p>
             <h3 class="fs-5">
-                <b>Rewards ({{endReward.length}})</b>
+                <b>Rewards ({{endReward.length}})
+                </b>
             </h3>
             <div class="gjs-row">
                 <div class="gjs-cell">
-                    <div class="py-1">{{#each endReward}}</div>
+                    <div class="py-1">{{#each endReward}}
+                    </div>
                     <p class="mb-2">{{name}}
                     </p>
                     <p>
-                        <span><u>{{itemDiscount}}</u></span>
+			<span><u>{{itemDiscount}}
+			  </u></span>
                     </p>
                     <p>
                         {{#if customerPoints}}
-                        <b>{{customerPoints}}</b> points
+                        <b>{{customerPoints}}
+                        </b> points
                         {{/if}}
                     </p>
-                    <p>{{description}}</p>
-                    <p class="text-warning">{{requirement}}</p>
-                    <div>{{/each}}</div>
+                    <p>{{description}}
+                    </p>
+                    <p class="text-warning">{{requirement}}
+                    </p>
+                    <div>{{/each}}
+                    </div>
                 </div>
             </div>
             <div class="gjs-row campaign-dates">
-                <div class="text-left gjs-cell" style="text-align: left">
-                    <p class="m-0 p-2 h-50">Starting {{start}}</p>
-                    <p class="m-0 p-2 h-50">{{#if end}} Ending {{end}} {{/if}}</p>
+                <div class="text-left gjs-cell">
+                    <p class="m-0 p-2 h-50">Starting {{start}}
+                    </p>
+                    <p class="m-0 p-2 h-50">{{#if end}} Ending {{end}} {{/if}}
+                    </p>
                 </div>
             </div>
             <div>{{/each}}
@@ -82,75 +70,25 @@
         </div>
     </div>
 </div>
-</body>
-<style>
-  * {
-    box-sizing: border-box;
-  }
+<style>* {
+  box-sizing: border-box;
+}
 
-  .campaign-dates {
-    color: rgb(85, 85, 85);
-    margin: 0 0 -40px -8px;
-    padding: 10px 10px 0 0;
-    font-size: 14px;
-  }
+body {
+  margin: 0;
+}
 
+body {
+  margin: 0;
+}
 
-  /** COPIED HERE FOR DEVELOPMENT ONLY */
-  body {
-    background-color: black;
-    min-height: 1050px;
-  }
+body {
+  margin: 0;
+}
 
-  body::before {
-    background: linear-gradient(
-            rgba(0, 0, 0, 0.4),
-            rgba(0, 0, 0, 0.4)
-    ), url(https://images.unsplash.com/photo-1525193612562-0ec53b0e5d7c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80);
-    background-position-y: center;
-    background-position-x: right;
-    content: "";
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: -1;
-    display: block;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-    -webkit-filter: blur(2px);
-    filter: blur(2px);
-  }
-
-  @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
-    .page-modal {
-      -webkit-backdrop-filter: blur(10px);
-      backdrop-filter: blur(10px);
-      background-color: rgba(255, 255, 255, 0.5);
-    }
-  }
-
-  .gjs-row {
-    display: table;
-    padding: 10px;
-    width: 100%;
-  }
-
-  .gjs-cell {
-    width: 8%;
-    display: table-cell;
-    height: 75px;
-  }
-
-  .page-modal {
-    text-align: center;
-    margin: 10px auto;
-    width: 90%;
-    border-radius: 7px;
-    color: rgb(47, 47, 47);
-    max-width: 700px;
-    /* background-color: rgba(189, 188, 188, 0.85); /* Fallback */
-  }
-
+.campaign-dates {
+  color: rgb(85, 85, 85);
+  margin: 0 0 0 -8px;
+  font-size: 14px;
+}
 </style>
-</html>
