style: fix tailwind resetting headings, remove extra space

--- a/assets/pages/campaigns.html
+++ b/assets/pages/campaigns.html
@@ -19,8 +19,7 @@
             </div>
             <p class="my-1 py-1 text-primary">
                 <span>
-                    {{currentStampsAll.length}}
-		            {{#if totalStampsNeeded}}/{{totalStampsNeeded}}{{/if}} total stamps
+                    {{currentStampsAll.length}}{{#if totalStampsNeeded}}/{{totalStampsNeeded}}{{/if}} total stamps
                 </span>
             </p>
             <p class="text-secondary h-auto p-3">{{description}}</p>
