feat: keep pwa page on reload

--- a/assets/pages/campaigns.html
+++ b/assets/pages/campaigns.html
@@ -6,7 +6,7 @@
         </div>
         <div class="my-2 fs-4 text-light text-center">
             Show your
-            <i><a href="/profile" class="link-light">QR code</a></i> to participate.
+            <i><a href="/page=profile" class="link-light">QR code</a></i> to participate.
         </div>
     </div>
     <div class="card page-modal my-3">
