--- a/assets/pages/rewards.html
+++ b/assets/pages/rewards.html
@@ -1,5 +1,4 @@
-<div id="i41z">Your Rewards ({{customerRewards.unused}})
-</div>
+<h1 class="text-primary" id="i41z">Your Rewards ({{customerRewards.unused}})</h1>
 <div id="id6ip">Show the QR code to use the reward.
 </div>
 <div id="isx5t">
@@ -78,7 +77,6 @@
     text-align: center;
     margin: 50px 0 25px;
     font-size: 26px;
-    color: rgb(14, 156, 9);
     letter-spacing: 1px;
   }
 
