--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -1,7 +1,8 @@
 <div id="iorn" class="gjs-row">
     <h1 class="page-title">Your Profile</h1>
     <div class="page-modal hide-notifications enable-notifications">
-        <p id="ibb93" class="enable-notifications">Enable push notifications to receive notifications of our latest deals!</p>
+        <p id="ibb93" class="page-smaller-text enable-notifications">Enable push notifications to receive notifications of our latest
+            deals!</p>
         <br/>
         <button class="btn btn-primary enable-notifications"><b>Enable Notifications</b></button>
     </div>
