feat: registration thing done?

--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -13,7 +13,11 @@
         </div>
     </div>
     <hr class="text-secondary" style="margin: 50px 0"/>
-    <div id="user-registration"> <!-- If id="user-registration" is set, this will be used as the registration form too -->
+    <!--
+    If id="user-registration" is set, this will be used as the registration form too.
+    Alternatively, page with pathname of "registration" or the premade template in the PWA can be used.
+    -->
+    <div id="user-registration">
         <h2 class="text-light">Your Information</h2>
         <div id="i2fd1" class="gjs-row">
             <div id="ix5tz" class="gjs-cell">
