work on user registration form

--- a/assets/pages/rewards.html
+++ b/assets/pages/rewards.html
@@ -22,8 +22,7 @@
             <p id="idi7g">{{#if products}} Products: {{#each products}}{{name}}{{#unless @last}}, {{/unless}}{{/each}}{{/if}}</p>
             <p id="i6755">{{#if categories}} Categories: {{#each categories}}{{name}}{{#unless @last}}, {{/unless}}{{/each}}{{/if}}</p>
         </div>
-        <p id="izywz">{{/each}}
-        </p>
+        <p id="izywz">{{/each}}</p>
     </div>
 </div>
 <div id="imqvp">{{#if customerRewards.used}} Used Rewards ({{customerRewards.used}}) {{/if}}
