--- a/assets/pages/profile.html
+++ b/assets/pages/profile.html
@@ -41,7 +41,7 @@
                                    min="1900-01-01" max="2010-12-31"/>
                         </div>
                         <div class="my-3">
-                            <div>
+                            <div style="white-space: nowrap;">
                                 <input required type="checkbox" id="tos-privacy-accept" name="acceptTosPrivacy" value="true"/>
                                 <label for="tos-privacy-accept" class="page-small-text form-check-label">I accept
                                     <a draggable="true" data-highlightable="1" href="https://getloyalty.app/terms">terms of service</a>
@@ -56,7 +56,6 @@
             </div>
         </div>
     </div>
-</div>
 </div>
 <style>
 
