--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -1,13 +1,11 @@
 <h1 class="page-title">Your Business</h1>
-<div class="page-text my-4">
-    <span class="py-2" style="color: red; font-weight: bold;">This could be your first loyalty app!</span>
-    You will be able to easily customize everything here.
-</div>
-
-<div class="page-text my-4">
-    Navigate to the other pages to find example campaigns, rewards and more.
-</div>
-
 <div>
+    <div class="page-text my-4">
+        <span class="py-2" style="color: aquamarine; font-weight: bold;">This could be your first loyalty app!</span>
+        You can easily customize everything on these pages.
+    </div>
 
+    <div class="page-text my-4 py-2">
+        Navigate to the other pages to find example campaigns, rewards and more.
+    </div>
 </div>
