--- a/scanner-app/web/index.html
+++ b/scanner-app/web/index.html
@@ -18,24 +18,34 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="The web version of the scanner app to scan QR codes.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="loyalty_scanner_app">
+  <meta name="apple-mobile-web-app-title" content="Loyalty Scanner App">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.ico"/>
 
-  <title>loyalty_scanner_app</title>
+  <title>GetLoyalty.App - Scanner App (Web)</title>
   <link rel="manifest" href="manifest.json">
+
+  <link href="loading.css" rel="stylesheet">
 
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
 
 </head>
 <body>
+
+  <!-- Simple splash screen -->
+  <div style="text-align:center; margin-top:20vh;">
+    <img style="width: 64px" src="icons/Icon-192.png" alt="GetLoyalty.App"/>
+    <h2>Scanner App</h2>
+    <div class="dot-flashing"></div>
+  </div>
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
