style: splash screen text color

--- a/scanner-app/web/index.html
+++ b/scanner-app/web/index.html
@@ -42,7 +42,7 @@
   <!-- Simple splash screen -->
   <div style="text-align:center; margin-top:20vh;">
     <img style="width: 64px" src="icons/Icon-192.png" alt="GetLoyalty.App"/>
-    <h2>Scanner App</h2>
+    <h2 style="color: gray;">Scanner App</h2>
     <div class="dot-flashing"></div>
   </div>
 
