style: home page

--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -1,11 +1,17 @@
 <h1 class="page-title">Your Business</h1>
 <div>
     <div class="page-text my-4">
-        <span class="py-2" style="color: aquamarine; font-weight: bold;">This could be your first loyalty app!</span>
-        You can easily customize everything on these pages.
+        <div class="py-3 mb-5">
+            <hr style="margin: auto; width: 95%"/>
+            <p class="py-3" style="color: aquamarine; font-weight: bold;">This could be your first loyalty app!</p>
+            <hr style="margin: auto; width: 95%"/>
+        </div>
+        <p>
+            You can easily customize everything on these pages.
+        </p>
     </div>
 
-    <div class="page-text my-4 py-2">
-        Navigate to the other pages to find example campaigns, rewards and more.
+    <div class="page-text my-4 py-3" style="font-size: 16px">
+        Navigate to the other pages to find the example campaigns, rewards and more.
     </div>
 </div>
